--- a/korsord.html
+++ b/korsord.html
@@ -67,7 +67,7 @@
         
         const letter = document.createElementNS("http://www.w3.org/2000/svg", "text");
         letter.setAttribute("x", x + 5);
-        letter.setAttribute("y", y + 5;
+        letter.setAttribute("y", y + 5);
         letter.setAttribute("font-size", "24");
         letter.setAttribute("fill", "#000000");
         letter.textContent = "A";
