--- a/korsord.html
+++ b/korsord.html
@@ -4,6 +4,15 @@
   <meta charset="UTF-8">
   <title>KORSORD</title>
   <style>
+    @font-face {
+		  font-family: Atkinson-Bold;
+		  src: url(font/AtkinsonHyperlegible-Bold.ttf) format("truetype");
+		}
+    @font-face {
+      font-family: morfeta;
+      src: url(font/MorfetaGealmord-5158V.otf) format("opentype");
+    }
+    
     svg {
       border: 1px solid #444;
       display: block;
@@ -11,6 +20,9 @@
     }
     rect {
       stroke: #2c3e50;
+    }
+    text{
+        font-family: Atkinson-Bold;
     }
   </style>
 </head>
