--- a/korsord.html
+++ b/korsord.html
@@ -76,13 +76,13 @@
            update_puzzle()
         });
 
-        
+        var letter_size = rectSize*0.8;
         const letter = document.createElementNS("http://www.w3.org/2000/svg", "text");
         letter.setAttribute("x", x + rectSize / 2);
         letter.setAttribute("y", y + rectSize / 2);
         letter.setAttribute("text-anchor", "middle");
         letter.setAttribute("dominant-baseline", "middle");
-        letter.setAttribute("font-size", "24");
+        letter.setAttribute("font-size", letter_size.toString());
         letter.setAttribute("fill", "#000000");
         letter.textContent = "A";
 
