--- a/korsord.html
+++ b/korsord.html
@@ -21,7 +21,7 @@
     rect {
       stroke: #2c3e50;
     }
-    .letter{
+    .ent{
         font-family: Atkinson-Bold;
 		pointer-events: none;
     }
@@ -85,8 +85,9 @@
         letter.setAttribute("dominant-baseline", "middle");
         letter.setAttribute("font-size", letter_size.toString());
         letter.setAttribute("fill", "#000000");
+		letter.setAttribute("class", "ent");
         letter.textContent = "A";
-		letter.class = "letter";
+
 
         svg.appendChild(rect);
         svg.appendChild(letter);
