--- a/index.html
+++ b/index.html
@@ -365,9 +365,9 @@
 		
 		<div id ='blogg_inlägg' class = blog_area>
 			<h2 style = "width: 100%;">SENASTE</h2>
+			<div id = 'main74'><script>draw_article_button('main74','2025/vart-är-logen',isMobile)</script></div>
 			<div id = 'main73'><script>draw_article_button('main73','2025/utflykt-till-hemköps-epicentrum',isMobile)</script></div>
 			<div id = 'main72'><script>draw_article_button('main72','2025/finn-fem-fel',isMobile)</script></div>
-			<div id = 'main71'><script>draw_article_button('main71','om-den-felplacerade-bandtischan',isMobile)</script></div>	
 																			
 			<h2 style = "width: 100%;">GAFFELS INNE-UTE-LISTA</h2>
 			<div id = 'iul'><script>draw_article_button('iul','2025/inne-ute-sep',isMobile)</script></div>
@@ -414,6 +414,7 @@
 			new_html += "</a>"
 			document.getElementById("tarot").innerHTML = new_html;
 			</script>-->
+			<div id = 'main71'><script>draw_article_button('main71','om-den-felplacerade-bandtischan',isMobile)</script></div>	
 			<div id = 'main70'><script>draw_article_button('main70','2025/disco-cognito',isMobile)</script></div>
 			<div id = 'main69'><script>draw_article_button('main69','vågmästaren',isMobile)</script></div>
 			<div id = 'main68'><script>draw_article_button('main68','solglasögon',isMobile)</script></div>
