--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
 		
 		<div id = 'top' style = "width: 100%; margin-top: 20px; margin-bottom: 20px;">
 			
-			<div id = 'blickfång1'><script>draw_article_button('blickfång1','2025/inne-ute-sep',isMobile)</script></div>
+			<div id = 'blickfång1'><script>draw_article_button('blickfång1','2025/är-love-rönnlund-cool',isMobile)</script></div>
 			<div style = "background: black; width: 100%;">
 
 			</div>
@@ -365,10 +365,10 @@
 		
 		<div id ='blogg_inlägg' class = blog_area>
 			<h2 style = "width: 100%;">SENASTE</h2>
+			<div id = 'main76'><script>draw_article_button('main76','2025/är-love-rönnlund-cool',isMobile)</script></div>
 			<div id = 'main75'><script>draw_article_button('main75','2025/jeansens-halveringstid',isMobile)</script></div>
 			<div id = 'main74'><script>draw_article_button('main74','2025/vart-är-logen',isMobile)</script></div>
-			<div id = 'main73'><script>draw_article_button('main73','2025/utflykt-till-hemköps-epicentrum',isMobile)</script></div>
-																			
+																					
 			<h2 style = "width: 100%;">GAFFELS INNE-UTE-LISTA</h2>
 			<div id = 'iul'><script>draw_article_button('iul','2025/inne-ute-sep',isMobile)</script></div>
 			<div style = "display: grid;">
@@ -414,6 +414,7 @@
 			new_html += "</a>"
 			document.getElementById("tarot").innerHTML = new_html;
 			</script>-->
+			<div id = 'main73'><script>draw_article_button('main73','2025/utflykt-till-hemköps-epicentrum',isMobile)</script></div>
 			<div id = 'main72'><script>draw_article_button('main72','2025/finn-fem-fel',isMobile)</script></div>
 			<div id = 'main71'><script>draw_article_button('main71','om-den-felplacerade-bandtischan',isMobile)</script></div>	
 			<div id = 'main70'><script>draw_article_button('main70','2025/disco-cognito',isMobile)</script></div>
