--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
 		
 		<div id = 'top' style = "width: 100%; margin-top: 20px; margin-bottom: 20px;">
 			
-			<div id = 'blickfång1'><script>draw_article_button('blickfång1','2025/wow-inferno',isMobile)</script></div>
+			<div id = 'blickfång1'><script>draw_article_button('blickfång1','2025/wow-purgatorio',isMobile)</script></div>
 			<div style = "background: black; width: 100%;">
 
 			</div>
@@ -366,9 +366,9 @@
 		<div id ='blogg_inlägg' class = blog_area>
 			<h2 style = "width: 100%;">SENASTE</h2>
 			
+			<div id = 'main79'><script>draw_article_button('main79','2025/wow-purgatorio',isMobile)</script></div>
 			<div id = 'main78'><script>draw_article_button('main78','2025/wow-inferno',isMobile)</script></div>
-			<div id = 'main77'><script>draw_article_button('main77','2025/5-andra-byggnader-att-flytta-på',isMobile)</script></div>
-			<div id = 'main76'><script>draw_article_button('main76','2025/är-love-rönnlund-cool',isMobile)</script></div>	
+			<div id = 'main77'><script>draw_article_button('main77','2025/5-andra-byggnader-att-flytta-på',isMobile)</script></div>			
 																					
 			<h2 style = "width: 100%;">GAFFELS INNE-UTE-LISTA</h2>
 			<div id = 'iul'><script>draw_article_button('iul','2025/inne-ute-okt',isMobile)</script></div>
@@ -415,6 +415,7 @@
 			new_html += "</a>"
 			document.getElementById("tarot").innerHTML = new_html;
 			</script>-->
+			<div id = 'main76'><script>draw_article_button('main76','2025/är-love-rönnlund-cool',isMobile)</script></div>
 			<div id = 'main75'><script>draw_article_button('main75','2025/jeansens-halveringstid',isMobile)</script></div>
 			<div id = 'main74'><script>draw_article_button('main74','2025/vart-är-logen',isMobile)</script></div>
 			<div id = 'main73'><script>draw_article_button('main73','2025/utflykt-till-hemköps-epicentrum',isMobile)</script></div>
@@ -438,17 +439,7 @@
 			<div id = 'main55'><script>draw_article_button('main55','aladåbens-återkomst',isMobile)</script></div>	
 			<div id = 'main54'><script>draw_article_button('main54','lockropets-anatomi',isMobile)</script></div>	
 			<div id = 'main53'><script>draw_article_button('main53','t-shirt',isMobile)</script></div>
-			<div id = 'main52'><script>draw_article_button('main52','hemsläp-2',isMobile)</script></div>
-			<div id = 'main51'><script>draw_article_button('main51','kent',isMobile)</script></div>	
-			<div id = 'main50'><script>draw_article_button('main50','regi-i-en-systemetkasse',isMobile)</script></div>
-			<div id = 'main49'><script>draw_article_button('main49','int-diset',isMobile)</script></div>	
-			<div id = 'main48'><script>draw_article_button('main48','fåglar',isMobile)</script></div>
-			<div id = 'main47'><script>draw_article_button('main47','recension-douglas-diamond',isMobile)</script></div>
-			<div id = 'main46'><script>draw_article_button('main46','4-band-som-kan-ske',isMobile)</script></div>
-			<div id = 'main45'><script>draw_article_button('main45','rutinkontroll-av-fredrik-strage',isMobile)</script></div>	
-			<div id = 'main44'><script>draw_article_button('main44','inne-ute-tidsmaskinen',isMobile)</script></div>
-			<div id = 'main43'><script>draw_article_button('main43','int-civilpolis',isMobile)</script></div>
-			<div id = 'main42'><script>draw_article_button('main42','om-pär-thörn',isMobile)</script></div>
+			
 
 			<div style = "margin-top: 20px; margin-bottom: 20px;">
 				<a class = 'artikel_knapp' href='/archive'>ÄLDRE ARTIKLAR</a>
