--- a/archive.html
+++ b/archive.html
@@ -299,6 +299,17 @@
 		<div id ='blogg_inlägg' class = blog_area>
 			
 			<h2 style = "width: 100%;">ÄLDRE</h2>
+			<div id = 'main52'><script>draw_article_button('main52','hemsläp-2',isMobile)</script></div>
+			<div id = 'main51'><script>draw_article_button('main51','kent',isMobile)</script></div>	
+			<div id = 'main50'><script>draw_article_button('main50','regi-i-en-systemetkasse',isMobile)</script></div>
+			<div id = 'main49'><script>draw_article_button('main49','int-diset',isMobile)</script></div>	
+			<div id = 'main48'><script>draw_article_button('main48','fåglar',isMobile)</script></div>
+			<div id = 'main47'><script>draw_article_button('main47','recension-douglas-diamond',isMobile)</script></div>
+			<div id = 'main46'><script>draw_article_button('main46','4-band-som-kan-ske',isMobile)</script></div>
+			<div id = 'main45'><script>draw_article_button('main45','rutinkontroll-av-fredrik-strage',isMobile)</script></div>	
+			<div id = 'main44'><script>draw_article_button('main44','inne-ute-tidsmaskinen',isMobile)</script></div>
+			<div id = 'main43'><script>draw_article_button('main43','int-civilpolis',isMobile)</script></div>
+			<div id = 'main42'><script>draw_article_button('main42','om-pär-thörn',isMobile)</script></div>
 			<div id = 'main41'><script>draw_article_button('main41','vertikala-cineaster',isMobile)</script></div>	
 			<div id = 'main40'><script>draw_article_button('main40','la-la-guldbaggen',isMobile)</script></div>
 			<div id = 'main39'><script>draw_article_button('main39','a-day-at-the-races',isMobile)</script></div>
