--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
 		
 		<div id = 'top' style = "width: 100%; margin-top: 20px; margin-bottom: 20px;">
 			
-			<div id = 'blickfång1'><script>draw_article_button('blickfång1','2025/wow-purgatorio',isMobile)</script></div>
+			<div id = 'blickfång1'><script>draw_article_button('blickfång1','2025/wow-paradiso',isMobile)</script></div>
 			<div style = "background: black; width: 100%;">
 
 			</div>
@@ -365,10 +365,10 @@
 		
 		<div id ='blogg_inlägg' class = blog_area>
 			<h2 style = "width: 100%;">SENASTE</h2>
-			
+
+			<div id = 'main80'><script>draw_article_button('main80','2025/wow-paradiso',isMobile)</script></div>
 			<div id = 'main79'><script>draw_article_button('main79','2025/wow-purgatorio',isMobile)</script></div>
-			<div id = 'main78'><script>draw_article_button('main78','2025/wow-inferno',isMobile)</script></div>
-			<div id = 'main77'><script>draw_article_button('main77','2025/5-andra-byggnader-att-flytta-på',isMobile)</script></div>			
+			<div id = 'main78'><script>draw_article_button('main78','2025/wow-inferno',isMobile)</script></div>					
 																					
 			<h2 style = "width: 100%;">GAFFELS INNE-UTE-LISTA</h2>
 			<div id = 'iul'><script>draw_article_button('iul','2025/inne-ute-okt',isMobile)</script></div>
@@ -379,6 +379,19 @@
 			</div>
 			
 			<h2 style = "width: 100%;">ÄLDRE</h2>
+			
+
+			<div id = 'main77'><script>draw_article_button('main77','2025/5-andra-byggnader-att-flytta-på',isMobile)</script></div>	
+			<div id = 'main76'><script>draw_article_button('main76','2025/är-love-rönnlund-cool',isMobile)</script></div>
+			<div id = 'main75'><script>draw_article_button('main75','2025/jeansens-halveringstid',isMobile)</script></div>
+			<div id = 'main74'><script>draw_article_button('main74','2025/vart-är-logen',isMobile)</script></div>
+			<div id = 'main73'><script>draw_article_button('main73','2025/utflykt-till-hemköps-epicentrum',isMobile)</script></div>
+			<div id = 'main72'><script>draw_article_button('main72','2025/finn-fem-fel',isMobile)</script></div>
+			<div id = 'main71'><script>draw_article_button('main71','om-den-felplacerade-bandtischan',isMobile)</script></div>	
+			<div id = 'main70'><script>draw_article_button('main70','2025/disco-cognito',isMobile)</script></div>
+			<div id = 'main69'><script>draw_article_button('main69','vågmästaren',isMobile)</script></div>
+			<div id = 'main68'><script>draw_article_button('main68','solglasögon',isMobile)</script></div>
+			<div id = 'main67'><script>draw_article_button('main67','the-room',isMobile)</script></div>
 			<div id="quiz"></div>
 			<script>
 			var new_html = `<a href = "quizhumoralpatologi">`
@@ -397,34 +410,6 @@
 			new_html += "</a>"
 			document.getElementById("quiz").innerHTML = new_html;
 			</script>
-			<!--<div id="tarot"></div>
-			<script>
-			var new_html = `<a href = "tarot">`
-			
-			new_html += `<div style = "width:100%; height: auto; display: table; margin-bottom: 10px">`
-			if(isMobile == false){
-				new_html += 	`<img src =  "https://i.imgur.com/RJpJTpc.png"
-						style = "width: 100%; float: right;">
-						</img>`
-			}
-			else{
-				new_html += 	`<img src =  "https://i.imgur.com/k6yAj15.png"
-						style = "width: 100%; float: right; background: black;">
-						</img>`
-			}
-			new_html += "</a>"
-			document.getElementById("tarot").innerHTML = new_html;
-			</script>-->
-			<div id = 'main76'><script>draw_article_button('main76','2025/är-love-rönnlund-cool',isMobile)</script></div>
-			<div id = 'main75'><script>draw_article_button('main75','2025/jeansens-halveringstid',isMobile)</script></div>
-			<div id = 'main74'><script>draw_article_button('main74','2025/vart-är-logen',isMobile)</script></div>
-			<div id = 'main73'><script>draw_article_button('main73','2025/utflykt-till-hemköps-epicentrum',isMobile)</script></div>
-			<div id = 'main72'><script>draw_article_button('main72','2025/finn-fem-fel',isMobile)</script></div>
-			<div id = 'main71'><script>draw_article_button('main71','om-den-felplacerade-bandtischan',isMobile)</script></div>	
-			<div id = 'main70'><script>draw_article_button('main70','2025/disco-cognito',isMobile)</script></div>
-			<div id = 'main69'><script>draw_article_button('main69','vågmästaren',isMobile)</script></div>
-			<div id = 'main68'><script>draw_article_button('main68','solglasögon',isMobile)</script></div>
-			<div id = 'main67'><script>draw_article_button('main67','the-room',isMobile)</script></div>
 			<div id = 'main66'><script>draw_article_button('main66','om-isen-i-ölen',isMobile)</script></div>
 			<div id = 'main65'><script>draw_article_button('main65','tuppjuck',isMobile)</script></div>
 			<div id = 'main64'><script>draw_article_button('main64','casablanca-en-stat-i-en-stat',isMobile)</script></div>
