--- a/artikel.html
+++ b/artikel.html
@@ -118,14 +118,15 @@
         <link rel="icon" type="image/x-icon" href="/favicon.ico">
        
 	<style>
-            @font-face {
+		@font-face {
+		  font-family: legaff;
+		  src: url(font/Legaff-Regular.otf) format("opentype");
+		}
+		 @font-face {
     		  font-family: morfeta;
     		  src: url(font/MorfetaGealmord-5158V.otf) format("opentype");
     		}
-		@font-face {
-		  font-family: helvetica_bold;
-		  src: url(font/Helvetica-Bold.ttf) format("truetype");
-		}
+
 		@font-face {
 		  font-family: Atkinson-Bold;
 		  src: url(font/AtkinsonHyperlegible-Bold.ttf) format("truetype");
@@ -148,9 +149,9 @@
                 width: clamp(100px,90vw, 700px);
             }
             .titel{
-                  font-family: morfeta;
+                  font-family: legaff;
         		  font-size: clamp(10px,10vw,100px);
-        		  line-height: 90%;
+        		  line-height: 100%;
         		  color: #000000FF;
                   
                   padding-top: 3%;
