--- a/index.html
+++ b/index.html
@@ -130,18 +130,16 @@
 	<link rel="canonical" href="https://gaffel.nu" />
 	
 	<style>
-		@font-face {
-		  font-family: newsagent;
-		  src: url(font/Newsagent-Regular.ttf) format("truetype");
-		}
+		
 		@font-face {
 		  font-family: morfeta;
 		  src: url(font/MorfetaGealmord-5158V.otf) format("opentype");
 		}
 		@font-face {
-		  font-family: helvetica_bold;
-		  src: url(font/Helvetica-Bold.ttf) format("truetype");
+		  font-family: legaff;
+		  src: url(font/Legaff-Regular.otf) format("opentype");
 		}
+		
 		 @font-face {
 		  font-family: Atkinson-Bold;
 		  src: url(font/AtkinsonHyperlegible-Bold.ttf) format("truetype");
