--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
 		
 		<div id = 'top' style = "width: 100%; margin-top: 20px; margin-bottom: 20px;">
 			
-			<div id = 'blickfång1'><script>draw_article_button('blickfång1','2025/wow-paradiso',isMobile)</script></div>
+			<div id = 'blickfång1'><script>draw_article_button('blickfång1','2025/om-pensionärens-plikt',isMobile)</script></div>
 			<div style = "background: black; width: 100%;">
 
 			</div>
@@ -359,11 +359,11 @@
 		
 		<div id ='blogg_inlägg' class = blog_area>
 			<h2 style = "width: 100%;">SENASTE</h2>
-
+			
+			<div id = 'main81'><script>draw_article_button('main81','2025/om-pensionärens-plikt',isMobile)</script></div>
 			<div id = 'main80'><script>draw_article_button('main80','2025/wow-paradiso',isMobile)</script></div>
 			<div id = 'main79'><script>draw_article_button('main79','2025/wow-purgatorio',isMobile)</script></div>
-			<div id = 'main78'><script>draw_article_button('main78','2025/wow-inferno',isMobile)</script></div>					
-																					
+																		
 			<h2 style = "width: 100%;">GAFFELS INNE-UTE-LISTA</h2>
 			<div id = 'iul'><script>draw_article_button('iul','2025/inne-ute-okt',isMobile)</script></div>
 			<div style = "display: grid;">
@@ -374,7 +374,7 @@
 			
 			<h2 style = "width: 100%;">ÄLDRE</h2>
 			
-
+			<div id = 'main78'><script>draw_article_button('main78','2025/wow-inferno',isMobile)</script></div>
 			<div id = 'main77'><script>draw_article_button('main77','2025/5-andra-byggnader-att-flytta-på',isMobile)</script></div>	
 			<div id = 'main76'><script>draw_article_button('main76','2025/är-love-rönnlund-cool',isMobile)</script></div>
 			<div id = 'main75'><script>draw_article_button('main75','2025/jeansens-halveringstid',isMobile)</script></div>
