--- a/index.html
+++ b/index.html
@@ -359,7 +359,8 @@
 		
 		<div id ='blogg_inlägg' class = blog_area>
 			<h2 style = "width: 100%;">SENASTE</h2>
-			
+			<div id = 'main82'><script>draw_article_button('main82','2025/progressiva-puben-del-1',isMobile)</script></div>
+			<a class = 'artikel_knapp' href='/artikel?=2025/progressiva-puben-del-2'>DEL 2</a>	
 			<div id = 'main81'><script>draw_article_button('main81','2025/om-pensionärens-plikt',isMobile)</script></div>
 			<div id = 'main80'><script>draw_article_button('main80','2025/wow-paradiso',isMobile)</script></div>
 			<div id = 'main79'><script>draw_article_button('main79','2025/wow-purgatorio',isMobile)</script></div>
