Update article buttons in index.html

--- a/index.html
+++ b/index.html
@@ -359,13 +359,13 @@
 		
 		<div id ='blogg_inlägg' class = blog_area>
 			<h2 style = "width: 100%;">SENASTE</h2>
-			<div id = 'main82'><script>draw_article_button('main82','2025/progressiva-puben-del-1',isMobile)</script></div>
+			<div id = 'main83'><script>draw_article_button('main83','2025/progressiva-puben-del-1',isMobile)</script></div>
 			<div style = "display: grid; margin-top: 5px; margin-bottom: 15px;">
 			<a class = 'artikel_knapp'  href='/artikel?=2025/progressiva-puben-del-2'>TILL BOTTEN MED DEN PROGRESSIVA PUBEN DEL 2</a>	
 			</div>
-			
+			<div id = 'main82'><script>draw_article_button('main82','2025/vidde-h',isMobile)</script></div>
 			<div id = 'main81'><script>draw_article_button('main81','2025/om-pensionärens-plikt',isMobile)</script></div>
-			<div id = 'main80'><script>draw_article_button('main80','2025/wow-paradiso',isMobile)</script></div>
+			
 			
 																		
 			<h2 style = "width: 100%;">GAFFELS INNE-UTE-LISTA</h2>
@@ -377,6 +377,7 @@
 			</div>
 			
 			<h2 style = "width: 100%;">ÄLDRE</h2>
+			<div id = 'main80'><script>draw_article_button('main80','2025/wow-paradiso',isMobile)</script></div>
 			<div id = 'main79'><script>draw_article_button('main79','2025/wow-purgatorio',isMobile)</script></div>
 			<div id = 'main78'><script>draw_article_button('main78','2025/wow-inferno',isMobile)</script></div>
 			<div id = 'main77'><script>draw_article_button('main77','2025/5-andra-byggnader-att-flytta-på',isMobile)</script></div>	
