--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
 		
 		<div id = 'top' style = "width: 100%; margin-top: 20px; margin-bottom: 20px;">
 			
-			<div id = 'blickfång1'><script>draw_article_button('blickfång1','2025/om-pensionärens-plikt',isMobile)</script></div>
+			<div id = 'blickfång1'><script>draw_article_button('blickfång1','2025/inne-ute-nov',isMobile)</script></div>
 			<div style = "background: black; width: 100%;">
 
 			</div>
@@ -369,11 +369,11 @@
 			
 																		
 			<h2 style = "width: 100%;">GAFFELS INNE-UTE-LISTA</h2>
-			<div id = 'iul'><script>draw_article_button('iul','2025/inne-ute-okt',isMobile)</script></div>
+			<div id = 'iul'><script>draw_article_button('iul','2025/inne-ute-nov',isMobile)</script></div>
 			<div style = "display: grid;">
+				<a class = 'artikel_knapp' href='/artikel?=inne-ute-okt-25'>OKTOBER</a>	
 				<a class = 'artikel_knapp' href='/artikel?=2025/inne-ute-sep'>SEPTEMBER</a>	
-				<a class = 'artikel_knapp' href='/artikel?=inne-ute-aug-25'>AUGUSTI</a>	
-				<a class = 'artikel_knapp' href='/artikel?=inne-ute-jul-25'>JULI</a>																							
+				<a class = 'artikel_knapp' href='/artikel?=inne-ute-aug-25'>AUGUSTI</a>																							
 			</div>
 			
 			<h2 style = "width: 100%;">ÄLDRE</h2>
