--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
 			<h2 style = "width: 100%;">GAFFELS INNE-UTE-LISTA</h2>
 			<div id = 'iul'><script>draw_article_button('iul','2025/inne-ute-nov',isMobile)</script></div>
 			<div style = "display: grid;">
-				<a class = 'artikel_knapp' href='/artikel?=inne-ute-okt-25'>OKTOBER</a>	
+				<a class = 'artikel_knapp' href='/artikel?=2025/inne-ute-okt'>OKTOBER</a>	
 				<a class = 'artikel_knapp' href='/artikel?=2025/inne-ute-sep'>SEPTEMBER</a>	
 				<a class = 'artikel_knapp' href='/artikel?=inne-ute-aug-25'>AUGUSTI</a>																							
 			</div>
