--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
 		
 		<div id = 'top' style = "width: 100%; margin-top: 20px; margin-bottom: 20px;">
 			
-			<div id = 'blickfång1'><script>draw_article_button('blickfång1','2025/inne-ute-nov',isMobile)</script></div>
+			<div id = 'blickfång1'><script>draw_article_button('blickfång1','2025/ballad-om-en-axelremsväska',isMobile)</script></div>
 			<div style = "background: black; width: 100%;">
 
 			</div>
@@ -359,12 +359,13 @@
 		
 		<div id ='blogg_inlägg' class = blog_area>
 			<h2 style = "width: 100%;">SENASTE</h2>
+			<div id = 'main84'><script>draw_article_button('main84','2025/ballad-om-en-axelremsväska',isMobile)</script></div>
 			<div id = 'main83'><script>draw_article_button('main83','2025/progressiva-puben-del-1',isMobile)</script></div>
 			<div style = "display: grid; margin-top: 5px; margin-bottom: 15px;">
 			<a class = 'artikel_knapp'  href='/artikel?=2025/progressiva-puben-del-2'>TILL BOTTEN MED DEN PROGRESSIVA PUBEN DEL 2</a>	
 			</div>
 			<div id = 'main82'><script>draw_article_button('main82','2025/vidde-h',isMobile)</script></div>
-			<div id = 'main81'><script>draw_article_button('main81','2025/om-pensionärens-plikt',isMobile)</script></div>
+			
 			
 			
 																		
@@ -377,6 +378,7 @@
 			</div>
 			
 			<h2 style = "width: 100%;">ÄLDRE</h2>
+			<div id = 'main81'><script>draw_article_button('main81','2025/om-pensionärens-plikt',isMobile)</script></div>
 			<div id = 'main80'><script>draw_article_button('main80','2025/wow-paradiso',isMobile)</script></div>
 			<div id = 'main79'><script>draw_article_button('main79','2025/wow-purgatorio',isMobile)</script></div>
 			<div id = 'main78'><script>draw_article_button('main78','2025/wow-inferno',isMobile)</script></div>
