--- a/artikel.html
+++ b/artikel.html
@@ -237,9 +237,9 @@
 
 	  <script src = "scripts_ab.js"></script>
 	  <div style = "background: #001015FF; padding-top: 30px;">
-		<div id = 'rec1'><script>draw_article_button('rec1','2025/är-love-rönnlund-cool',isMobile,false)</script></div>	
-		<div id = 'rec2'><script>draw_article_button('rec2','2025/inne-ute-okt',isMobile,false)</script></div>	
-		<div id = 'rec3'><script>draw_article_button('rec3','2025/5-andra-byggnader-att-flytta-på',isMobile,false)</script></div>
+		<div id = 'rec1'><script>draw_article_button('rec1','2025/ballad-om-en-axelremsväska',isMobile,false)</script></div>	
+		<div id = 'rec2'><script>draw_article_button('rec2','2025/inne-ute-nov',isMobile,false)</script></div>	
+		<div id = 'rec3'><script>draw_article_button('rec3','2025/progressiva-puben-del-1',isMobile,false)</script></div>
 	  </div>
         </div>
 
