Change delimiter from '§§' to '#Titel:'

--- a/rutan.html
+++ b/rutan.html
@@ -178,7 +178,7 @@
          .then(function(resp){
 	         var str = resp;
 
-			let f = "§§";
+			let f = "#Titel:";
 		    let inl_num = str.split(f).length - 1;
 		var text_i = 0
 		for (let i = 0; i < inl_num; i++) {
