--- a/rutan.html
+++ b/rutan.html
@@ -182,9 +182,17 @@
 		    let inl_num = str.split(f).length - 1;
 		var text_i = 0
 		for (let i = 0; i < inl_num; i++) {
-		  	text_i = str.indexOf(`§§`,text_i);
+		  	text_i = str.indexOf(`===`,text_i);
+
+			var title_i = str.indexOf(`titel{`,text_i);
+			var title_ei = str.indexOf(`}`,title_i);
+
+			var signatur_i = str.indexOf(`signatur{`,text_i);
+			var signatur_ei = str.indexOf(`}`,signatur_i);
+			
 			text_i += 2;
 
+			
 		}
 		
 		
