--- a/rutan.html
+++ b/rutan.html
@@ -192,7 +192,7 @@
 				if(titel_i != -1){
 					var titel_ei = str.indexOf(`}`,titel_i);
 	
-					var titel = str.substring(titel_i,titel_ei);
+					var titel = str.substring(titel_i+6,titel_ei);
 					new_html += titel;
 				}
 				
