--- a/rutan.html
+++ b/rutan.html
@@ -212,10 +212,10 @@
 						var bild = str.substring(bild_i+4,bild_ei);
 					}
 
-					new_html += "<p>${Titel}</p>";
-					new_html += "<p>${Signatur}</p>";
-					new_html += "<p>${Text}</p>";
-					new_html += "<p>${Bild}</p>";
+					new_html += `<p>${Titel}</p>`;
+					new_html += `<p>${Signatur}</p>`;
+					new_html += `<p>${Text}</p>`;
+					new_html += `<p>${Bild}</p>`;
 					
 					new_html += "</div>";
 					
