Add console log for next_str_i index tracking
Added console log to track the index of the next occurrence of '===' in the string.

--- a/rutan.html
+++ b/rutan.html
@@ -185,6 +185,8 @@
 			  	str_i = str.indexOf("===",str_i);
 
 				next_str_i = str.indexOf("===",str_i+4);
+
+				console.log(next_str_i)
 				
 				if(str_i != -1){
 		
