--- a/rutan.html
+++ b/rutan.html
@@ -192,6 +192,11 @@
 				if(str_i != -1){
 		
 					new_html += "<div>";
+
+					var titel = ""
+					var signatur = ""
+					var text = ""
+					var bild = ""
 					
 					var titel_i = str.indexOf(`Titel{`,str_i);
 					console.log(titel_i)
