--- a/index.html
+++ b/index.html
@@ -301,9 +301,27 @@
 	<div class = tidning>
 		
 		<div id = 'top' style = "width: 100%; margin-top: 20px; margin-bottom: 20px;">
-			<a href="https://fb.me/e/6QTiCH7WP" target="_blank">
-			  <img src="https://i.imgur.com/vpnMFll.png" alt="länk" style="width:100%; height:auto;">
-			</a>
+
+			<div id="quiz"></div>
+			<script>
+			var new_html = `<a href = "https://fb.me/e/6QTiCH7WP">`
+			
+			new_html += `<div style = "width:100%; height: auto; display: table; margin-bottom: 10px">`
+			if(isMobile == false){
+				new_html += 	`<img src =  "https://i.imgur.com/Nt2UCZi.png"
+						style = "width: 100%; float: right;">
+						</img>`
+			}
+			else{
+				new_html += 	`<img src =  "https://i.imgur.com/pZKiCcU.png"
+						style = "width: 100%; float: right; background: black;">
+						</img>`
+			}
+			new_html += "</a>"
+			document.getElementById("quiz").innerHTML = new_html;
+			</script>
+			
+			
 			
 			<!--
 			<div id = 'blickfång1'><script>draw_article_button('blickfång1','2025/doom-metal',isMobile)</script></div>
