Replace quiz div with reklam_banner div

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
 		
 		<div id = 'top' style = "width: 100%; margin-top: 20px; margin-bottom: 20px;">
 
-			<div id="quiz"></div>
+			<div id="reklam_banner"></div>
 			<script>
 			var new_html = `<a href = "https://fb.me/e/6QTiCH7WP">`
 			
@@ -318,7 +318,7 @@
 						</img>`
 			}
 			new_html += "</a>"
-			document.getElementById("quiz").innerHTML = new_html;
+			document.getElementById("reklam_banner").innerHTML = new_html;
 			</script>
 			
 			
