--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 	<div class = tidning>
 		
 		<div id = 'top' style = "width: 100%; margin-top: 20px; margin-bottom: 20px;">
-
+			<!--
 			<div id="reklam_banner"></div>
 			<script>
 			var new_html = `<a href = "https://fb.me/e/6QTiCH7WP">`
@@ -320,13 +320,12 @@
 			new_html += "</a>"
 			document.getElementById("reklam_banner").innerHTML = new_html;
 			</script>
-			
-			
-			
-			<!--
-			<div id = 'blickfång1'><script>draw_article_button('blickfång1','2025/doom-metal',isMobile)</script></div>
-			
 			-->
+			
+			
+			
+			<div id = 'blickfång1'><script>draw_article_button('blickfång1','2025/recension-vasas',isMobile)</script></div>
+			
 
 			<div style = "background: black; width: 100%;">
 			</div>
@@ -383,9 +382,10 @@
 		
 		<div id ='blogg_inlägg' class = blog_area>
 			<h2 style = "width: 100%;">SENASTE</h2>
+			<div id = 'main86'><script>draw_article_button('main86','2025/recension-vasas',isMobile)</script></div>
 			<div id = 'main86'><script>draw_article_button('main86','2025/den-moderna-människans-nattklubb',isMobile)</script></div>
 			<div id = 'main85'><script>draw_article_button('main85','2025/doom-metal',isMobile)</script></div>
-			<div id = 'main84'><script>draw_article_button('main84','2025/ballad-om-en-axelremsväska',isMobile)</script></div>
+			
 
 																		
 			<h2 style = "width: 100%;">GAFFELS INNE-UTE-LISTA</h2>
@@ -435,6 +435,7 @@
 			new_html += "</a>"
 			document.getElementById("quiz").innerHTML = new_html;
 			</script>
+			<div id = 'main84'><script>draw_article_button('main84','2025/ballad-om-en-axelremsväska',isMobile)</script></div>
 			<div id = 'main66'><script>draw_article_button('main66','om-isen-i-ölen',isMobile)</script></div>
 			<div id = 'main65'><script>draw_article_button('main65','tuppjuck',isMobile)</script></div>
 			<div id = 'main64'><script>draw_article_button('main64','casablanca-en-stat-i-en-stat',isMobile)</script></div>
