--- a/archive.html
+++ b/archive.html
@@ -130,14 +130,7 @@
 	<link rel="canonical" href="https://gaffel.nu" />
 	
 	<style>
-		@font-face {
-		  font-family: newsagent;
-		  src: url(font/Newsagent-Regular.ttf) format("truetype");
-		}
-		@font-face {
-		  font-family: morfeta;
-		  src: url(font/MorfetaGealmord-5158V.otf) format("opentype");
-		}
+
 		@font-face {
 		  font-family: helvetica_bold;
 		  src: url(font/Helvetica-Bold.ttf) format("truetype");
@@ -145,6 +138,10 @@
 		 @font-face {
 		  font-family: Atkinson-Bold;
 		  src: url(font/AtkinsonHyperlegible-Bold.ttf) format("truetype");
+		}
+		@font-face {
+		  font-family: legaff;
+		  src: url(font/Legaff-Regular.otf) format("opentype");
 		}
 
 		body{
