--- a/rutan.html
+++ b/rutan.html
@@ -144,6 +144,7 @@
 		.c_titel{
 			font-family: legaff;
 			color: white;
+			margin: 10px;
 		}
 		.c_bild{
 			width: 100%;
@@ -152,10 +153,12 @@
 		.c_text{
 			color: white;
 			font: georgia;
+			margin: 10px;
 		}
 		.c_signatur{
 			background: white;
 			color: black;
+			margin: 10px;
 		}
 		
 		
@@ -244,7 +247,7 @@
 					}
 
 					new_html += `<p class = "c_titel">${titel}</p>`;
-					new_html += `<p clas = "c_text">${text}</p>`;
+					new_html += `<p class = "c_text">${text}</p>`;
 					new_html += `<img src = "${bild}" class = "c_bild"></img>`;
 					new_html += `<p class = "c_signatur">${signatur}</p>`;	
 					
