--- a/rutan.html
+++ b/rutan.html
@@ -144,7 +144,10 @@
 		.c_titel{
 			font-family: legaff;
 			color: white;
-			margin: 10px;
+			margin-left: 20px;
+			margin-right: 20px;
+			margin-top: 20px;
+			margin-bottom: 20px;
 		}
 		.c_bild{
 			width: 100%;
@@ -153,11 +156,17 @@
 		.c_text{
 			color: white;
 			font: georgia;
-			margin: 10px;
+			margin-left: 20px;
+			margin-right: 20px;
+			margin-top: 20px;
+			margin-bottom: 20px;
 		}
 		.c_signatur{
 			color: white;
-			margin: 10px;
+			margin-left: 20px;
+			margin-right: 20px;
+			margin-top: 20px;
+			margin-bottom: 20px;
 		}
 		
 		
