--- a/index.html
+++ b/index.html
@@ -351,9 +351,9 @@
 					</img>`
 		}
 		else{
-			new_html += 	`<img src =  "bilder/gaffel_i_värld_kvadrat.png"
-					style = "width: 100%; float: right; background: black;">
-					</img>`
+			new_html += 	`<video autoplay muted style = "width: 100%; float: right; background: black;">
+						<source src = "bilder/gaffel_world_turn.webm" type = "video/webm">
+					</video>`
 		}
 		
 		new_html += `<div style = "width: ${roww}%; margin: 3%; float: left;">
