--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
 					</img>`
 		}
 		else{
-			new_html += 	`<video autoplay muted style = "width: 100%; float: right; background: black;">
+			new_html += 	`<video autoplay muted loop style = "width: 100%; float: right; background: black;">
 						<source src = "bilder/gaffel_world_turn.webm" type = "video/webm">
 					</video>`
 		}
