--- a/rutan.html
+++ b/rutan.html
@@ -139,15 +139,13 @@
 		.post{
 			background: #000000FF;
 			max-width: 200px;
+			margin: 10px;
 		}
 
 		.c_titel{
 			font-family: legaff;
 			color: white;
-			margin-left: 20px;
-			margin-right: 20px;
-			margin-top: 20px;
-			margin-bottom: 20px;
+			border: 20px;
 		}
 		.c_bild{
 			width: 100%;
@@ -156,17 +154,12 @@
 		.c_text{
 			color: white;
 			font: georgia;
-			margin-left: 20px;
-			margin-right: 20px;
-			margin-top: 20px;
-			margin-bottom: 20px;
+			border: 20px;
 		}
 		.c_signatur{
+			background: red;
 			color: white;
-			margin-left: 20px;
-			margin-right: 20px;
-			margin-top: 20px;
-			margin-bottom: 20px;
+			border: 20px;
 		}
 		
 		
