--- a/rutan.html
+++ b/rutan.html
@@ -145,7 +145,7 @@
 		.c_titel{
 			font-family: legaff;
 			color: white;
-			border: 20px;
+			padding: 20px;
 		}
 		.c_bild{
 			width: 100%;
@@ -154,12 +154,12 @@
 		.c_text{
 			color: white;
 			font: georgia;
-			border: 20px;
+			padding: 20px;
 		}
 		.c_signatur{
 			background: red;
 			color: white;
-			border: 20px;
+			padding: 20px;
 		}
 		
 		
