Adjust styles in rutan.html

--- a/rutan.html
+++ b/rutan.html
@@ -146,6 +146,7 @@
 			font-family: legaff;
 			color: white;
 			padding: 20px;
+			font-size: 40px;
 		}
 		.c_bild{
 			width: 100%;
@@ -157,7 +158,6 @@
 			padding: 20px;
 		}
 		.c_signatur{
-			background: red;
 			color: white;
 			padding: 20px;
 		}
