--- a/rutan.html
+++ b/rutan.html
@@ -145,7 +145,9 @@
 		.c_titel{
 			font-family: legaff;
 			color: white;
-			padding: 20px;
+			padding-top: 20px;
+			padding-left: 20px;
+			padding-right: 20px;
 			font-size: 30px;
 		}
 		.c_bild{
@@ -155,7 +157,9 @@
 		.c_text{
 			color: white;
 			font: georgia;
-			padding: 20px;
+			padding-bottom: 10px;
+			padding-left: 20px;
+			padding-right: 20px;
 		}
 		.c_signatur{
 			color: white;
