Remove margin from CSS styles
Removed margin from multiple CSS classes.

--- a/rutan.html
+++ b/rutan.html
@@ -149,6 +149,7 @@
 			padding-left: 20px;
 			padding-right: 20px;
 			font-size: 30px;
+			margin: 0px;
 		}
 		.c_bild{
 			width: 100%;
@@ -160,10 +161,12 @@
 			padding-bottom: 10px;
 			padding-left: 20px;
 			padding-right: 20px;
+			margin: 0px;
 		}
 		.c_signatur{
 			color: white;
 			padding: 20px;
+			margin: 0px;
 		}
 		
 		
