--- a/rutan.html
+++ b/rutan.html
@@ -145,7 +145,8 @@
 		
 		.post{
 			background: #000000FF;
-			max-width: 250px;
+			max-width: 300px;
+			min-width: 170px;
 			margin: 10px;
 		}
 
