--- a/rutan.html
+++ b/rutan.html
@@ -140,7 +140,7 @@
 			width: clamp(10px,100%,1000px);
 			display: flex;
 			margin: auto;
-			magin-top: 50px;
+			margin-top: 50px;
 		}
 		
 		.post{
