--- a/rutan.html
+++ b/rutan.html
@@ -139,6 +139,7 @@
 		.holder{
 			width: clamp(10px,100%,1000px);
 			display: flex;
+			flex-wrap: wrap;
 			margin: auto;
 			margin-top: 50px;
 		}
