Correct CSS properties in rutan.html
Fix CSS syntax errors in .holder class.

--- a/rutan.html
+++ b/rutan.html
@@ -138,8 +138,11 @@
 
 		.holder{
 			width: clamp(10px,100%,1000px);
+			height: 1000px:
 			display: flex;
 			flex-wrap: wrap;
+			flex-direction: column
+			align-content: space-around
 			margin: auto;
 			margin-top: 50px;
 		}
