--- a/rutan.html
+++ b/rutan.html
@@ -138,7 +138,7 @@
 
 		.holder{
 			width: clamp(10px,100%,1000px);
-			height: 1000px:
+			max-height: 1000px;
 			display: flex;
 			flex-wrap: wrap;
 			flex-direction: column
