--- a/rutan.html
+++ b/rutan.html
@@ -141,8 +141,8 @@
 			max-height: 1000px;
 			display: flex;
 			flex-wrap: wrap;
-			flex-direction: column
-			align-content: space-around
+			flex-direction: column;
+			align-content: space-around;
 			margin: auto;
 			margin-top: 50px;
 		}
