--- a/rutan.html
+++ b/rutan.html
@@ -142,7 +142,7 @@
 			display: flex;
 			flex-wrap: wrap;
 			flex-direction: column;
-			align-content: space-around;
+			align-content: center;
 			margin: auto;
 			margin-top: 50px;
 		}
