--- a/rutan.html
+++ b/rutan.html
@@ -145,6 +145,7 @@
 			align-content: center;
 			margin: auto;
 			margin-top: 50px;
+			margin-bottom: 90px;
 		}
 		
 		.post{
@@ -155,6 +156,7 @@
 
 		.c_titel{
 			font-family: legaff;
+			line-height: 0.9;
 			color: white;
 			padding-top: 20px;
 			padding-left: 20px;
@@ -169,6 +171,7 @@
 		.c_text{
 			color: white;
 			font: georgia;
+			margin-top: 10px;
 			padding-bottom: 10px;
 			padding-left: 20px;
 			padding-right: 20px;
