--- a/rutan.html
+++ b/rutan.html
@@ -170,7 +170,7 @@
 		}
 		.c_text{
 			color: white;
-			font: georgia;
+			font-family: Georgia;
 			padding-bottom: 10px;
 			padding-left: 20px;
 			padding-right: 20px;
@@ -179,7 +179,7 @@
 		}
 		.c_signatur{
 			color: white;
-			font: georgia;
+			font-family: Georgia;
 			font-style: italic;
 			padding: 20px;
 			margin: 0px;
