--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
 			
 			
 			
-			<div id = 'blickfång1'><script>draw_article_button('blickfång1','2025/recension-vasas',isMobile)</script></div>
+			<div id = 'blickfång1'><script>draw_article_button('blickfång1','2025/borås-tur-och-retur',isMobile)</script></div>
 			
 
 			<div style = "background: black; width: 100%;">
@@ -382,12 +382,10 @@
 		
 		<div id ='blogg_inlägg' class = blog_area>
 			<h2 style = "width: 100%;">SENASTE</h2>
+			<div id = 'main88'><script>draw_article_button('main88','2025/borås-tur-och-retur',isMobile)</script></div>
 			<div id = 'main87'><script>draw_article_button('main87','2025/recension-vasas',isMobile)</script></div>
 			<div id = 'main86'><script>draw_article_button('main86','2025/den-moderna-människans-nattklubb',isMobile)</script></div>
-			<div id = 'main85'><script>draw_article_button('main85','2025/doom-metal',isMobile)</script></div>
-			
-
-																		
+															
 			<h2 style = "width: 100%;">GAFFELS INNE-UTE-LISTA</h2>
 			<div id = 'iul'><script>draw_article_button('iul','2025/inne-ute-nov',isMobile)</script></div>
 			<div style = "display: grid;">
@@ -397,6 +395,7 @@
 			</div>
 			
 			<h2 style = "width: 100%;">ÄLDRE</h2>
+			<div id = 'main85'><script>draw_article_button('main85','2025/doom-metal',isMobile)</script></div>
 			<div id = 'main84'><script>draw_article_button('main84','2025/ballad-om-en-axelremsväska',isMobile)</script></div>
 			<div id = 'main83'><script>draw_article_button('main83','2025/progressiva-puben-del-1',isMobile)</script></div>
 			<div style = "display: grid; margin-top: 5px; margin-bottom: 15px;">
