--- a/rutan.html
+++ b/rutan.html
@@ -256,8 +256,8 @@
 				
 				if(str_i != -1){
 		
-					if(isMobile){new_html += `<div class = "post">`;}
-					else{new_html += `<div class = "post_mobile">`;}
+					if(isMobile){new_html += `<div class = "post_mobile">`;}
+					else{new_html += `<div class = "post">`;}
 
 					var titel = ""
 					var signatur = ""
