--- a/rutan.html
+++ b/rutan.html
@@ -137,7 +137,7 @@
 		}
 
 		.holder{
-			width: clamp(10px,100%,1300px);
+			width: clamp(10px,100vw,1300px);
 			max-height: 1300px;
 			display: flex;
 			flex-wrap: wrap;
@@ -149,7 +149,7 @@
 		}
 
 		.holder_mobile{
-			width: 95%;
+			width: 95vw;
 			margin: auto;
 			margin-top: 50px;
 			margin-bottom: 90px;
