--- a/rutan.html
+++ b/rutan.html
@@ -182,6 +182,7 @@
 		.c_text{
 			color: white;
 			font-family: Georgia;
+			line-height: 1.05;
 			padding-bottom: 10px;
 			padding-left: 20px;
 			padding-right: 20px;
