--- a/rutan.html
+++ b/rutan.html
@@ -211,7 +211,9 @@
 	<div w3-include-html="header.html"></div>
 	<script>w3.includeHTML();</script>
 
-    <div id = "rutan_hållare" class = "holder"></div>
+    <div id = "rutan_hållare" class = "holder">
+		<img src = "bilder/rutan_logotyp"></img>
+	</div>
       
 	  <script>
 		function detectMob() {
