--- a/rutan.html
+++ b/rutan.html
@@ -133,7 +133,7 @@
 			margin: 0px;
 			padding: 0px;
 			max-width: 100%;
-		  overflow-x: hidden;
+		    overflow-x: hidden;
 		}
 
 		.holder{
@@ -212,7 +212,7 @@
 	<script>w3.includeHTML();</script>
 
     <div id = "rutan_hållare" class = "holder">
-		<img src = "bilder/rutan_logotyp"></img>
+		<img src = "bilder/rutan_logotyp.webp"></img>
 	</div>
       
 	  <script>
