--- a/rutan.html
+++ b/rutan.html
@@ -210,10 +210,9 @@
 	<script src="https://www.w3schools.com/lib/w3.js"></script>
 	<div w3-include-html="header.html"></div>
 	<script>w3.includeHTML();</script>
-
-    <div id = "rutan_hållare" class = "holder">
-		<img src = "bilder/rutan_logotyp.webp"></img>
-	</div>
+	
+	<img src = "bilder/rutan_logotyp.webp" style = "width: clamp(10px, 100%, 600px); height: auto;"></img>
+    <div id = "rutan_hållare" class = "holder"></div>
       
 	  <script>
 		function detectMob() {
