--- a/rutan.html
+++ b/rutan.html
@@ -209,7 +209,7 @@
 	<div w3-include-html="header.html"></div>
 	<script>w3.includeHTML();</script>
 	
-	<img src = "bilder/rutan_logotyp.webp" style = "width: clamp(10px, 100%, 600px); height: auto; margin: auto;"></img>
+	<img src = "bilder/rutan_logotyp.webp" style = "width: clamp(10px, 100%, 600px); height: auto; display: block; margin: auto;"></img>
     <div id = "rutan_hållare" class = "holder"></div>
       
 	  <script>
