--- a/rutan.html
+++ b/rutan.html
@@ -138,6 +138,7 @@
 
 		.holder{
 			width: clamp(10px,100vw,1300px);
+			height: min-content;
 			display: flex;
 			flex-wrap: wrap;
 			flex-direction: column;
