--- a/index.html
+++ b/index.html
@@ -385,20 +385,24 @@
 		
 		<div id ='blogg_inlägg' class = blog_area>
 			<h2 style = "width: 100%;">SENASTE</h2>
-			<div id = 'main89'><script>draw_article_button('main89','2025/cos-näktergal-på-lokal',isMobile)</script></div>
+			
 			<div id = 'main88'><script>draw_article_button('main88','2025/borås-tur-och-retur',isMobile)</script></div>
 			<div id = 'main87'><script>draw_article_button('main87','2025/recension-vasas',isMobile)</script></div>	
-															
+			<div id = 'main86'><script>draw_article_button('main86','2025/den-moderna-människans-nattklubb',isMobile)</script></div>
+			
+			<h2 style = "width: 100%;">CELIBAT & STADEN</h2>
+			<div id = 'cos'><script>draw_article_button('cos','2025/cos-näktergal-på-lokal',isMobile)</script></div>
+			
 			<h2 style = "width: 100%;">GAFFELS INNE-UTE-LISTA</h2>
-			<div id = 'iul'><script>draw_article_button('iul','2025/inne-ute-nov',isMobile)</script></div>
+			<div id = 'iul'><script>draw_article_button('iul','2025/inne-ute-dec',isMobile)</script></div>
 			<div style = "display: grid;">
+				<a class = 'artikel_knapp' href='/artikel?=2025/inne-ute-nov'>AUGUSTI</a>		
 				<a class = 'artikel_knapp' href='/artikel?=2025/inne-ute-okt'>OKTOBER</a>	
-				<a class = 'artikel_knapp' href='/artikel?=2025/inne-ute-sep'>SEPTEMBER</a>	
-				<a class = 'artikel_knapp' href='/artikel?=inne-ute-aug-25'>AUGUSTI</a>																							
+				<a class = 'artikel_knapp' href='/artikel?=2025/inne-ute-sep'>SEPTEMBER</a>																				
 			</div>
 			
 			<h2 style = "width: 100%;">ÄLDRE</h2>
-			<div id = 'main86'><script>draw_article_button('main86','2025/den-moderna-människans-nattklubb',isMobile)</script></div>
+			
 			<div id = 'main85'><script>draw_article_button('main85','2025/doom-metal',isMobile)</script></div>
 			<div id = 'main84'><script>draw_article_button('main84','2025/ballad-om-en-axelremsväska',isMobile)</script></div>
 			<div id = 'main83'><script>draw_article_button('main83','2025/progressiva-puben-del-1',isMobile)</script></div>
