--- a/rutan.html
+++ b/rutan.html
@@ -141,7 +141,7 @@
 			height: auto;
 			display: flex;
 			flex-wrap: wrap;
-			flex-direction: column;
+			flex-direction: row;
 			align-content: center;
 			margin: auto;
 			margin-bottom: 90px;
@@ -157,6 +157,7 @@
 			background: #000000FF;
 			width: 300px;
 			margin: 10px;
+			flex-grow: 3;
 		}
 		.post_mobile{
 			background: #000000FF;
