--- a/artikel.html
+++ b/artikel.html
@@ -149,7 +149,8 @@
         		  font-size: clamp(10px,10vw,80px);
         		  line-height: 100%;
         		  color: #000000FF;
-                  
+				  text-align: center;
+				
                   padding-top: 3%;
                   margin-left: 5%;    
                   margin-right: 5%; 
