--- a/rutan.html
+++ b/rutan.html
@@ -138,10 +138,10 @@
 
 		.holder{
 			width: clamp(10px,100vw,1300px);
-			height: auto;
+			height: 1300px;
 			display: flex;
 			flex-wrap: wrap;
-			flex-direction: row;
+			flex-direction: column;
 			align-content: center;
 			margin: auto;
 			margin-bottom: 90px;
