--- a/rutan.html
+++ b/rutan.html
@@ -196,6 +196,12 @@
 			margin: 0px;
 		}
 		
+		.intro{
+			color: black;
+			font-family: Georgia;
+			width: clamp(0px,90vw,200px)
+			text-align: center;
+		}
 		
         </style>
     </head>
@@ -211,7 +217,8 @@
 	<script>w3.includeHTML();</script>
 	
 	<img src = "bilder/rutan_logotyp.webp" style = "width: clamp(10px, 100%, 600px); height: auto; display: block; margin: auto;"></img>
-    <div id = "rutan_hållare" class = "holder"></div>
+    <p class = "intro">Det finns många rutor i världen: fönster, schackbräden, rökrutor och post it-lappar. Den här rutan gör inga sådana anspråk men om vi får ge ett råd: stanna en stund, läs lite, eller skriv något. It's hip to be square. </p>
+	<div id = "rutan_hållare" class = "holder"></div>
       
 	  <script>
 		function detectMob() {
