--- a/rutan.html
+++ b/rutan.html
@@ -199,8 +199,9 @@
 		.intro{
 			color: black;
 			font-family: Georgia;
-			width: clamp(0px,90vw,200px)
+			width: clamp(0px,90vw,200px);
 			text-align: center;
+			margin: auto;
 		}
 		
         </style>
