--- a/rutan.html
+++ b/rutan.html
@@ -202,6 +202,8 @@
 			width: clamp(0px,90vw,200px);
 			text-align: center;
 			margin: auto;
+			margin-top: 20px;
+			margin-bottom: 20px;
 		}
 		
         </style>
