--- a/rutan.html
+++ b/rutan.html
@@ -199,10 +199,10 @@
 		.intro{
 			color: black;
 			font-family: Georgia;
-			width: clamp(0px,90vw,200px);
+			font-style: bold;
+			width: clamp(0px,90vw,400px);
 			text-align: center;
 			margin: auto;
-			margin-top: 20px;
 			margin-bottom: 20px;
 		}
 		
