--- a/rutan.html
+++ b/rutan.html
@@ -220,7 +220,7 @@
 	<script>w3.includeHTML();</script>
 	
 	<img src = "bilder/rutan_logotyp.webp" style = "width: clamp(10px, 100%, 600px); height: auto; display: block; margin: auto;"></img>
-    <p class = "intro">Det finns många rutor i världen: fönster, schackbräden, rökrutor och post it-lappar. Den här rutan gör inga sådana anspråk men om vi får ge ett råd: stanna en stund, läs lite, eller skriv något. It's hip to be square. </p>
+    <p class = "intro">Det finns många rutor i världen: fönsterrutor, schackrutor, magrutor, rökrutor och vaccinsprutor. Den här rutan gör inga sådana anspråk men om vi får ge ett råd: stanna en stund, läs lite, eller skriv något. It's hip to be square. </p>
 	<div id = "rutan_hållare" class = "holder"></div>
       
 	  <script>
