--- a/rutan.html
+++ b/rutan.html
@@ -138,7 +138,7 @@
 
 		.holder{
 			width: clamp(10px,100vw,1300px);
-			height: calc(1700px - 70vw);
+			height: auto;
 			display: flex;
 			flex-wrap: wrap;
 			flex-direction: column;
@@ -312,8 +312,9 @@
 
 			}
 			
-		
-         document.getElementById('rutan_hållare').innerHTML = new_html;
+		var division = document.getElementById('rutan_hållare')
+         division.innerHTML = new_html;
+			 division.style.height = 2000 - division.style.width;
        
         })
     
