--- a/rutan.html
+++ b/rutan.html
@@ -312,9 +312,9 @@
 
 			}
 			
-		var division = document.getElementById('rutan_hållare')
-         division.innerHTML = new_html;
-			 division.style.height = 2000 - division.style.width;
+			 var division = document.getElementById('rutan_hållare')
+         	 division.innerHTML = new_html;
+			 division.style.height = String(2000 - division.style.width)+"px";
        
         })
     
