--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 	
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Gaffel Magasin är sveriges farligaste popkulturmagasin. Allt det du borde veta om mode, pop, kultur och popkultur. Jag läser gaffel, vafan gör du?">
+	<meta name="description" content="Vi fortsätter spela pop.">
 	<meta name="keywords" content="gaffel, magasin, popkultur, kultur, göteborg">
 	<meta name="msvalidate.01" content="6844FBEEC009DB46FD737B018250EEE8" />
 
