--- a/rutan.html
+++ b/rutan.html
@@ -315,7 +315,7 @@
 			
 			 var division = document.getElementById('rutan_hållare')
          	 division.innerHTML = new_html;
-			 division.style.height = String(2000 - division.width)+"px";
+			 division.style.height = String(2000 - division.offsetWidth)+"px";
        
         })
     
