--- a/rutan.html
+++ b/rutan.html
@@ -249,8 +249,8 @@
 
 	function setHeight(){
 		var el = document.getElementById('rutan_hållare')
-		var minheight = el.scrollHeight
-		var width = el.offsetWidth)
+		var minheight = el.scrollHeight;
+		var width = el.offsetWidth;
 		el.style.height = String(max(2000 - width,minheight))+"px";
 	}
 		  
