--- a/rutan.html
+++ b/rutan.html
@@ -250,8 +250,11 @@
 	function setHeight(){
 		var el = document.getElementById('rutan_hållare')
 		var minheight = el.scrollHeight;
+		console.log(el.height)
+		console.log(el.offsetHeight)
+		console.log(el.scrollHeight)
 		var width = el.offsetWidth;
-		el.style.height = String(Math.max(2000 - width,minheight))+"px";
+		el.style.height = String(2000 - width)+"px";
 	}
 		  
     var new_html = ""
